[tool.poetry]
name = "nih-cxr-data-processor"
version = "0.1.0"
description = "This Poetry package is designed to preprocess the NIH Chest X-ray Dataset for machine learning tasks. The preprocessing pipeline supports both multi-class and multi-label classification problems. The package includes functionalities for data cleaning and splitting into training, validation, and test sets."
authors = ["Irina <Irina RAKOTOARISEDY>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.scripts]
nih_processor_app = "src.main:app"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
seaborn = "^0.13.2"
rich = "^13.9.4"
scikit-learn = "^1.5.2"
pydantic = "^2.10.1"
PyYAML = "^6.0.2"
trogon = "^0.6.0"
typer = "^0.13.1"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
